moved assets folder

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="col p-4 d-flex flex-column position-relative box-shadow"  >
           <strong class="d-inline-block mb-2 text-secondary">Fire Cupping</strong>
           <div class="col-auto d-lg-block">
-            <img src="C:\Users\dasik\projekts\massagebyroy-master\assets\images\cupping_small.jpg" alt="Cupping">
+            <img src="assets\images\cupping_small.jpg" alt="Cupping">
           </div>
           <h3 class="mb-0">List of Benefits</h3>
           <div class="mb-1 text-muted">According to Healthline.com</div>
@@ -110,7 +110,7 @@
         <div class="col p-4 d-flex flex-column position-static box-shadow">
           <strong class="d-inline-block mb-2 text-success">Massage Gun</strong>
           <div class="col-auto d-lg-block">
-            <img src="C:\Users\dasik\projekts\massagebyroy-master\assets\images\smallGun.jpg" alt="theragun">
+            <img src="assets\images\smallGun.jpg" alt="theragun">
           </div>
           <h3 class="mb-0">List of Benefits</h3>
           <div class="mb-1 text-muted">According to Sports Medicine Clinic</div><div class="RqBzHd"><ul class="i8Z77e"><li class="TrT0Xe">Reduce <b>pain</b>.</li><li class="TrT0Xe">Increase <b>blood flow</b>.</li><li class="TrT0Xe">Break up <b>scar tissue</b>.</li>
