--- a/index.html
+++ b/index.html
@@ -178,8 +178,14 @@
     <div class="col-auto">
       <div class="p-2 mb-3 bg-light rounded">
         <h4 class="font-italic">Current Massage Range</h4>
-        <p class="mb-0">I work/travel all over <em>Southern California</em> I provide in-home service for your comfort.</p>
-        <strong>Price: $160hr</strong><i>+$40 for long freeway commutes</i>
+        <p class="mb-0">I work/travel all over <em>Southern California</em> providing in-home service, or @work, for your comfort.
+        </p>
+        <p class="text-break"></p>
+        <strong>Table Massage Price: $160hr</strong><i>+$40 for long freeway commutes</i>
+        <p class="text-break"></p>
+        <strong>Chair Massage Price: $100 for 1st hr followed by $80 for every subsequent hr.
+        </strong><i>+$40 for long freeway commutes</i>
+
       </div>
 
       <div class="p-2">
