--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a class="nav-link active" aria-current="page" href="#features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"></a>
+              <a class="nav-link" href="https://www.instagram.com/massagebyroy/?hl=en" target="_blank">Instagram</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#preventative">Preventative </a>
