cannabis man added

--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
           <p>CBD is everywhere these days but <a href="https://www.menshealth.com/health/a26467604/cbd-for-inflammation-muscle-recovery/"><strong>how much should i take? </strong> Why and when should i take it? </p></a>
         </blockquote>
         <p>THCA or <strong><em>Tetrahydrocannabinolic acid </em></strong> works to relieve inflammation, pain and is an ideal cannabinoid for treating symptoms of such conditions from arthritis to seizures.</p>
+
+        <div class="responsive"><img class="img-fluid" src="assets\images\cannabisMan.jpg" alt="cannabis-man">
+
+        </div>
+
         <hr>
         <h2><italic>My Massage Modalities</italic></h2>
         <ul>
