updated links to previous employers

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
           <li><a href="https://www.terranea.com/spa">Terranea</a></li>
           <li><a href="#">Spa Hotel and Casino</a></li>
           <li><a href="#">The Knot Stop</a></li>
-          <li><a href="#">Palm Springs Yacht Club</a></li>
-          <li><a href="#">Miramonte</a></li>
+          <li><a href="https://www.parkerpalmsprings.com/palm-springs-yacht-club/">Palm Springs Yacht Club</a></li>
+          <li><a href="https://www.miramonteresort.com/the-well-spa">The Well at Miramonte Resort and Spa</a></li>
         </ol>
       </div>
 
