--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static box-shadow">
-          <strong class="d-inline-block mb-2 text-success">Massage Gun</strong>
+          <strong class="d-inline-block mb-2 text-success">Percussive Therapy</strong>
           <div class="col-auto d-lg-block">
             <img src="assets\images\smallGun.jpg" alt="theragun">
           </div>
